<resources>
    <string name="app_name">Sharky</string>
    <string name="petNameText">Name</string>
    <string name="petInfoText">Breed, Age, Sex</string>
    <string name="petImageDescr">Pet image</string>
    <string name="colorText">Color</string>
    <string name="petColorText">Pet color</string>
    <string name="breedText">Breed</string>
    <string name="chipIDText">Chip ID</string>
    <string name="petChipIDText">Chip ID</string>
    <string name="ownerText">Owner</string>
    <string name="ownerName">Owner name</string>
    <string name="ownerNumber">Owner number</string>
    <string name="ownerAddress">Owner address</string>
    <string name="vetText">Vet</string>
    <string name="vetName">Vet name</string>
    <string name="vetNumber">Vet number</string>
    <string name="vetAddress">Vet address</string>
    <string name="marksText">Special characteristics</string>
    <string name="petMarksText">Pet marks</string>
    <string name="noPetText">No pet to show!</string>
    <string name="noPetsText">No pets to show!</string>
    <string name="exploreText">Explore</string>
    <string name="dogsText">Dogs</string>
    <string name="catsText">Cats</string>
    <string name="otherText">Other</string>
    <string name="menuList">List</string>
    <string name="menuGrid">Grid</string>
    <string name="speciesText">Species</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="firstNameText">First name</string>
    <string name="lastNameText">Last name</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
</resources>
