<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/usernameText"
            android:inputType="textPersonName"
            android:text=""
            android:textColorLink="@color/colorPrimary" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/usernameText"
            android:layout_marginTop="27dp"
            android:ems="10"
            android:hint="@string/passwordText"
            android:inputType="textPersonName"
            android:text=""
            android:textColorLink="@color/colorPrimary"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/passwordText"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="24dp"
            android:text="@string/loginText" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/loginButton"
            android:layout_alignParentStart="true"
            android:text="@string/registerText" />
    </RelativeLayout>
</LinearLayout>