<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">


    <TextView
        android:id="@+id/exploreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/exploreText"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp" />

    <Button
        android:id="@+id/dogsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exploreText"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:background="#64B5F6"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/dog_icon"
        android:padding="10dp"
        android:text="@string/dogsText"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:radius="10dp"/>

    <Button
        android:id="@+id/catsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dogsButton"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:background="#EC407A"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/cat_icon"
        android:padding="10dp"
        android:radius="10dp"
        android:text="@string/catsText"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/otherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dogsButton"
        android:layout_below="@+id/dogsButton"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="90dp"
        android:background="#7E57C2"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/other_icon"
        android:padding="10dp"
        android:radius="10dp"
        android:text="@string/otherText"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="24sp" />

</RelativeLayout>

